@@ -300,6 +300,11 @@ set shoutcastPassword "none"
 set g_headshot 0
 set g_instagibDamage 400
 set g_shrubbotOptions 0
+set g_ettvFlags 3
+
+// Lua API
+set lua_modules ""
+set lua_allowedModules ""
 
 exec campaigncycle.cfg
 set com_watchdog 60
