@@ -2080,3 +2080,4 @@
 * pheno:   fixed !rename if player has reached max name changes
 * pheno:   added support for ETPro's delete mapscript command
 * pheno:   fixed delete mascript command causes server crashes
+* pheno:   added g_ettvFlags bitflag cvar (see docs)
